--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@prisma/client": "^2.9.0",
+    "chalk": "^4.1.0",
+    "uuid": "^8.3.1",
     "yargs": "^16.1.0"
   }
 }
