--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "doc": "jsdoc -c jsdoc.json"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "@prisma/cli": "^2.9.0"
   },
   "dependencies": {
-    "@prisma/client": "^2.9.0"
+    "@prisma/client": "^2.9.0",
+    "jsdoc": "^3.6.6"
   }
 }
