--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "errorproject",
-  "version": "1.0.0",
+  "name": "codefellows-slipup",
+  "version": "0.0.06",
   "description": "401 Codefellows Midterm project using Javascript",
   "main": "hub.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "preinstall": "node config.js",
-    "postinstall": "rm ./prisma/.env && ln -s ./.env ./prisma/.env && npx prisma introspect && npx prisma generate",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preinstall": "node config.js ",
+    "postinstall": "npx prisma init && rm ./prisma/.env && mv .env ./prisma && npx prisma introspect && npm i @prisma/client"
   },
   "repository": {
     "type": "git",
@@ -17,17 +16,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/401-midterm-DaveeRyanBenJon/ohNoLogger/issues"
   },
   "homepage": "https://github.com/401-midterm-DaveeRyanBenJon/ohNoLogger#readme",
-  "devDependencies": {
-    "@prisma/cli": "^2.9.0"
-  },
   "dependencies": {
     "@prisma/cli": "^2.9.0",
-    "@prisma/client": "^2.9.0",
     "chalk": "^4.1.0",
     "inquirer": "^7.3.3",
     "jsdoc": "^3.6.6",
