--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
   },
   "homepage": "https://github.com/401-midterm-DaveeRyanBenJon/ohNoLogger#readme",
   "dependencies": {
-    "@prisma/cli": "^2.9.0",
-    "@prisma/client": "^2.9.0",
+    "@prisma/client": "^2.10.0",
     "chalk": "^4.1.0",
     "inquirer": "^7.3.3",
     "jsdoc": "^3.6.6",
     "pg": "^8.4.2",
     "uuid": "^8.3.1",
     "yargs": "^16.1.0"
+  },
+  "devDependencies": {
+    "@prisma/cli": "^2.10.0"
   }
 }
