--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "preinstall": "node config.js ",
-    "postinstall": "npx prisma init && rm ./prisma/.env && mv .env ./prisma && npx prisma introspect && npm i @prisma/client && node successpig.js"
+    "postinstall": "npx prisma init && rm ./prisma/.env && mv .env ./prisma && npx prisma introspect && npm i @prisma/client && node successpig.js",
+    "test": "jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "@prisma/client": "^2.10.0",
     "chalk": "^4.1.0",
     "inquirer": "^7.3.3",
+    "jest": "^26.6.1",
     "jsdoc": "^3.6.6",
     "pg": "^8.4.2",
     "uuid": "^8.3.1",
