--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codefellows-slipup",
-  "version": "0.0.07",
+  "version": "0.0.18",
   "description": "401 Codefellows Midterm project using Javascript",
   "main": "hub.js",
   "directories": {
@@ -24,15 +24,12 @@
   "homepage": "https://github.com/401-midterm-DaveeRyanBenJon/ohNoLogger#readme",
   "dependencies": {
     "@prisma/client": "^2.10.0",
+    "@prisma/cli": "^2.10.0",
     "chalk": "^4.1.0",
     "inquirer": "^7.3.3",
-    "jest": "^26.6.1",
     "jsdoc": "^3.6.6",
     "pg": "^8.4.2",
     "uuid": "^8.3.1",
     "yargs": "^16.1.0"
-  },
-  "devDependencies": {
-    "@prisma/cli": "^2.10.0"
   }
 }
