--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "inquirer": "^7.3.3",
     "pg": "^8.4.2",
     "uuid": "^8.3.1",
-    "yargs": "^16.1.0"
-  },
-  "devDependencies": {
+    "yargs": "^16.1.0",
     "jsdoc": "^3.6.6"
   }
+
 }
